src/index.css
@import url('https://fonts.googleapis.com/css2?family=BioRhyme&display=swap');

html {
    height: 90%;
}

body {
    /* background-image: url('https://www.gamebyte.com/wp-content/uploads/2020/11/ddtbzeomt3y01.jpg') !important; */
    /* border: 2px solid black; */
    background-color: rgb(132,170,217) !important;
    margin: 0;
    height: 100%;
    font-family: 'BioRhyme', serif !important;
    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
        sans-serif; */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
        monospace;
}

.ui-container {
    background-color: rgb(255,213,139);
    border: 4px solid rgb(229,120,61);
    filter: drop-shadow(5px 5px 0.25rem rgb(0, 0, 0, 0.2));
    box-shadow: inset 1px 1px 4px rgb(0, 0, 0, 0.5);
    padding: 5px
}

.selector:hover {
    filter: drop-shadow(2px 2px 0.1rem rgb(0, 0, 0, 0.2))
}

h2, h3, h4, h5, h6 {
    text-align: center;
}

#root {
    height: 100% !important;
}

